# adventure

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
assets/: metadata.yml
source/: main.cpp
